CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET (CMAKE_VERBOSE_MAKEFILE OFF)
include (stm32.cmake)

PROJECT (robot1)

SET(USB_LIB "" CACHE STRING "")

# +-----------------+
# | My code         |
# +-----------------+
INCLUDE_DIRECTORIES("src/")
LIST (APPEND APP_SOURCES "src/main.c")
LIST (APPEND APP_SOURCES "src/stm32f4xx_it.c")
LIST (APPEND APP_SOURCES "src/syscalls.c")
LIST (APPEND APP_SOURCES "src/system_stm32f0xx.c")
LIST (APPEND APP_SOURCES "src/config.h")
LIST (APPEND APP_SOURCES "src/stm32f0xx_hal_conf.h")

# +-----------------+
# | My ble impl.    |
# +-----------------+
# Includujemy, bo oczywiście jest includowanie na krzyż
INCLUDE_DIRECTORIES("src/ble")
LIST (APPEND APP_SOURCES "src/ble/clock.c")
LIST (APPEND APP_SOURCES "src/ble/sensor_service.c")
LIST (APPEND APP_SOURCES "src/ble/sensor_service.h")
LIST (APPEND APP_SOURCES "src/ble/stm32_bluenrg_ble.c")
LIST (APPEND APP_SOURCES "src/ble/stm32_bluenrg_ble.h")
LIST (APPEND APP_SOURCES "src/ble/stm32f4xx_nucleo_bluenrg.h")

# +-----------------+
# | BlueNRG library |
# +-----------------+
SET (BLUE_NRG_ROOT "/home/iwasz/workspace/STM32CubeExpansion_BLE1_V2.6.1/Middlewares/ST/")
INCLUDE_DIRECTORIES("${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes")
#LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/hci_dma_lp.c")
#LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_utils_small.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_gap_aci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_gatt_aci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_hal_aci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_updater_aci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_l2cap_aci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_utils.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/controller/bluenrg_IFR.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/hci/hci.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/utils/osal.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/utils/gp_timer.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/utils/ble_list.c")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/hal.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/hal_types.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/ble_list.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_aci_const.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_gatt_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_l2cap_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/ble_clock.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/link_layer.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_utils.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/osal.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_gatt_server.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_hal_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/hci_const.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/sm.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/debug.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_gap_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/ble_status.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_updater_aci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/compiler.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/bluenrg_gap.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/hci.h")
LIST (APPEND APP_SOURCES "${BLUE_NRG_ROOT}/STM32_BlueNRG/SimpleBlueNRG_HCI/includes/gp_timer.h")

# +--------------+
# | STM Cube     |
# +--------------+
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_adc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_adc_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_can.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_cec.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_comp.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_cortex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_crc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_crc_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_dac.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_dac_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_dma.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_flash_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_gpio.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2c.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2c_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_i2s.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_irda.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_iwdg.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_msp_template.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pcd.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pcd_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rcc_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rtc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_rtc_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_smartcard.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_smartcard_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_smbus.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_spi.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_spi_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tim.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tim_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_tsc.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_uart.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_uart_ex.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_usart.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_wwdg.c")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_uart_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_iwdg.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_rcc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_def.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_pwr_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_i2c.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_uart.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_smartcard.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_i2c_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_pcd.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_wwdg.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_i2s.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_tsc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_usart.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_rtc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_adc_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_crc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_pwr.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_dac_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_irda_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_flash.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_tim_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_dma.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_irda.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_smbus.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_adc.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_spi_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_tim.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_can.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_cec.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_rcc_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_pcd_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_gpio.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_flash_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_comp.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_dac.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_conf_template.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_dma_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_usart_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_spi.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_smartcard_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_gpio_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_crc_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_rtc_ex.h")
LIST (APPEND APP_SOURCES "${CUBE_ROOT}/Drivers/STM32F0xx_HAL_Driver/Inc/stm32f0xx_hal_cortex.h")

LIST (APPEND APP_SOURCES "${STARTUP_CODE}")
ADD_DEFINITIONS ("-DHSE_VALUE=${CRYSTAL_HZ}")

#ADD_DEFINITIONS (-DUSE_USB_FS)
#INCLUDE_DIRECTORIES("${USB_LIB}/Core/Inc")
#INCLUDE_DIRECTORIES("${USB_LIB}/Class/CDC/Inc")
#LIST (APPEND APP_SOURCES "${USB_LIB}/Core/Src/usbd_core.c")
#LIST (APPEND APP_SOURCES "${USB_LIB}/Core/Src/usbd_ctlreq.c")
#LIST (APPEND APP_SOURCES "${USB_LIB}/Core/Src/usbd_ioreq.c")
#LIST (APPEND APP_SOURCES "${USB_LIB}/Class/CDC/Src/usbd_cdc.c")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${APP_SOURCES})
SET (CMAKE_OBJCOPY ${TOOLCHAIN_BIN_DIR}/${TARGET_TRIPLET}-objcopy)
SET (CMAKE_OBJDUMP ${TOOLCHAIN_BIN_DIR}/${TARGET_TRIPLET}-objdump)
ADD_CUSTOM_TARGET(${CMAKE_PROJECT_NAME}.bin ALL DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin)

FIND_PROGRAM (ST_FLASH st-flash)
ADD_CUSTOM_TARGET("upload" DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${ST_FLASH} --reset write ${CMAKE_PROJECT_NAME}.bin 0x8000000)
